--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@nestjs/core": "^7.0.1",
     "@nestjs/graphql": "^7.2.0",
     "@nestjs/platform-express": "^7.0.1",
-    "graphql": "^15.0.0",
+    "apollo-server-express": "^2.11.0",
+    "class-validator": "^0.11.1",
+    "graphql": "^14.6.0",
     "graphql-tools": "^4.0.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
