--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.1",
     "apollo-server-express": "^2.11.0",
+    "bcrypt": "^4.0.1",
+    "bson": "^4.0.4",
     "class-validator": "^0.11.1",
     "graphql": "^14.6.0",
     "graphql-tools": "^4.0.7",
@@ -37,7 +39,8 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.4",
+    "uuid": "^7.0.3"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
