--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "graphql": "^14.6.0",
     "graphql-tools": "^4.0.7",
     "mongoose": "^5.9.7",
+    "nestjs-telegram": "^1.1.2",
+    "node-telegram-bot-api": "^0.40.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -49,6 +51,7 @@
     "@types/jest": "^25.1.4",
     "@types/mongoose": "^5.7.8",
     "@types/node": "^13.9.1",
+    "@types/node-telegram-bot-api": "^0.40.2",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
